优化Collection工具类